# OCR_SnippingTool

./: .gitignore  README.md  Tesseract_README.md  installer.cfg  main.py  pyproject.toml  requirements.txt  tess_env_setup.py
Snip Ocr/: Image_OCR.py  Snipper.py  __init__.py
Snip_Ocr/: Image_OCR.py  Snipper.py
